--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* General styles */
+
 :root {
     --white: #FFFFFF;
     --black: #000000;
@@ -17,6 +19,8 @@ body {
 .inactive {
     display: none;
 }
+
+/* General navbar */
 
 nav {
     display: flex;
@@ -92,6 +96,8 @@ nav {
     align-items: center;
 }
 
+/* Desktop menu */
+
 .desktop-menu {
     position: absolute;
     background: var(--white);
@@ -136,6 +142,47 @@ nav {
     display: inline-block;
 }
 
+/* Mobile menu */
+
+.mobile-menu {
+    position: absolute;
+    top: 60px;
+    padding: 24px;
+}
+
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /* margin-bottom: 24px; */
+}
+
+.mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+}
+
+.mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
+.mobile-menu ul li {
+    margin-bottom: 24px;
+}
+
+.email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+}
+
+.sign-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+}
+
+
+
 @media (max-width: 640px) {
     .menu {
         display: block;
@@ -146,6 +193,16 @@ nav {
     }
 
     .navbar-email {
+        display: none;
+    }
+
+    .desktop-menu {
+        display: none;
+    }   
+}
+
+@media (min-width: 641px) {
+    .mobile-menu {
         display: none;
     }
 }
